--- a/templates/admin/order_item/new.html.twig
+++ b/templates/admin/order_item/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new OrderItem</h1>
 
-    {{ include('order_item/_form.html.twig') }}
+    {{ include('admin/order_item/_form.html.twig') }}
 
     <a href="{{ path('order_item_index') }}">back to list</a>
 {% endblock %}
