--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -46,12 +46,12 @@
                   <tbody>
                     {% for item in categories %}
                     <tr>
-                      <td>{{ item.title}}</td>
+                      <td data-title="">{{ item.title}}</td>
                       <td>
-                        <a href="{{ path('category_edit', {'id': item.id}) }}" class="btn"><i
+                        <a href="{{ path('category_edit', {'id': item.id}) }}" id="{{ item.id }}" class="btn js-edit"><i
                             class="fas fa-edit text-success"></i>
                         </a>
-                        <form method="post" class="d-inline-block" action="{{ path('category_delete', {'id': item.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                        <form method="post" class="d-inline-block js-delete" action="{{ path('category_delete', {'id': item.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
                           <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
                           <button class="btn"><i class="fas fa-trash-alt text-danger "></i></button>
                         </form>
@@ -68,6 +68,41 @@
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+{# <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-add">
+  Launch Large Modal
+</button> #}
+<div class="modal fade" id="modal-add" style="display: none;" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Large Modal</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label>Nom</label>
+              <input type="text" name="category" id="title" class="form-control" placeholder="Categorie">
+              {# <small id="helpId" class="text-muted">Help text</small> #}
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer justify-content-between">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
+<!-- ./Modal -->
 {% endblock %}
 
 {% block foot %}
@@ -83,6 +118,29 @@
      $('#gestions').addClass(' menu-is-opening menu-open')
      $('.gestions').addClass('active')
      $('.gestion-category').addClass('active') 
+      
+      // edit category
+      // $(document).on('click','.js-edit',function(e){
+      //   e.preventDefault()
+      //   let id  = $(this).attr('id')
+      //   // $('.modal-title').val('Edit category')
+
+      //   $.ajax({
+      //     url: $(this).attr('href'),
+      //     method:"POST",
+      //     data:{
+      //       id_category : id
+      //     },
+      //     dataType:"json",
+      //     success:function(data) {
+            
+      //       $('#title').val(data.category.title)
+      //       $('#modal-add').modal('show')
+      //       // console.log(data);
+      //     }
+      //   })
+      //   // alert(id_category)
+      // })
    })
   </script>
 {% endblock %}
