--- a/templates/admin/order/edit.html.twig
+++ b/templates/admin/order/edit.html.twig
@@ -25,8 +25,13 @@
 {% endblock %}
 
 {% block body %}
+
 {% for item in app.flashes('success') %}
   {{ alerte.alert(item,'success')}}
+{% endfor %}
+
+{% for item in app.flashes('warning') %}
+  {{ alerte.alert(item,'warning')}}
 {% endfor %}
     
 <div class="row">
@@ -83,12 +88,16 @@
                             <tbody>
                             {% for item in order.orderItem %}
                                 <tr>
-                                    <td width="2">{{ item.quantity }}</td>
-                                    <td>{{ item.produitName }} </td>
+                                    <td width="20%">
+
+                                            {{ item.quantity }}
+
+                                    </td>
+                                    <td>{{ item.produitName }}  </td>
                                     <td>{{ item.unitPrice| number_format(2,',',' ') }}</td>
                                     <td width="100">{{ item.unitsTotal | number_format(2,',',' ') }}</td>
                                     <td>
-                                        <a href="#"><i class="fas fa-pencil-alt text-success"></i> </a>
+                                        <a  href="{{ path('order_item_edit',{article_id: '1' ,id: item.id}) }}"><i class="fas fa-pencil-alt text-success"></i> </a>
                                         <form class="d-inline-block" method="post" action="{{ path('order_item_delete', {'id': item.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
                                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
                                             <button class="btn"><i class="text-danger fa fa-trash-alt"></i></button>
