--- a/templates/admin/order_item/edit.html.twig
+++ b/templates/admin/order_item/edit.html.twig
@@ -1,13 +1,33 @@
 {% extends 'admin/base.html.twig' %}
+{% import "macros/breadcrumb.html.twig" as utils %}
 
 {% block title %}Edit OrderItem{% endblock %}
 
+{% block breadcrumb %}
+    {{ utils.breadcrumb('Edit Order',[
+        {
+            path:'order_index',
+            name:'Manage orders'
+        }
+    ])}}
+{% endblock %}
+
 {% block body %}
-    <h1>Edit OrderItem</h1>
+<div class="row">
+    <div class="col-6 mx-auto">
+        <div class="card card-outline card-success">
+            <div class="card-header">
+                <h4>Edit Order Item</h4>
+            </div>
+            <div class="card-body">
+            {{ include('admin/order_item/_form.html.twig', {'button_label': 'Update'}) }}
+            </div>
+        </div>
+    </div>
+</div>
 
-    {{ include('admin/order_item/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('order_item_index') }}">back to list</a>
+    <a href="{{ path('order_edit',{id: order_item.commande.id,tab:'articles' },) }}">back to order</a>
 
     {{ include('admin/order_item/_delete_form.html.twig') }}
 {% endblock %}
