order add ready first part

--- a/templates/admin/order/new.html.twig
+++ b/templates/admin/order/new.html.twig
@@ -72,12 +72,12 @@
                                 <div class="form-group col-md-12">
                                     {{ form_row(form.user)}}
                                 </div>
-                                <div class="form-group col-md-6">
+                                {# <div class="form-group col-md-6">
                                     {{ form_row(form.number)}}
-                                </div>
-                                <div class="form-group col-md-6">
+                                </div> #}
+                                {# <div class="form-group col-md-6">
                                     {{ form_row(form.state)}}
-                                </div>
+                                </div> #}
                                 <div class="form-group col-md-12">
                                     {{ form_row(form.note)}}
                                 </div>
@@ -91,7 +91,7 @@
                     <!-- Article -->
                     <div id="article-part" class="content" role="tabpanel" aria-labelledby="article-part-trigger">
                         <div class="form-group">
-                            {{ form_row(form.order_item)}}
+                            {# {{ form_row(form.order_item)}} #}
                         </div>
                         <button type="button" class="btn btn-primary" onclick="stepper.previous()">Previous</button>
                         <button type="button" class="btn btn-primary" onclick="stepper.next()">Next</button>
