--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -121,6 +121,9 @@
                 </div>
             </div>
             <!-- /.card -->
+            <div class="card-footer">
+                <a href="{{ path('admin') }}" class="btn btn-default">Back to dashboard <i class="fa fa-arrow-circle-left" aria-hidden="true"></i></a>
+            </div>
         </div>
     </div>
 {% endblock %}
