--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -57,8 +57,8 @@
             <span class="info-box-icon bg-success elevation-1"><i class="fas fa-shopping-cart"></i></span>
 
             <div class="info-box-content">
-            <span class="info-box-text">Sales</span>
-            <span class="info-box-number">760</span>
+            <span class="info-box-text">Order</span>
+            <span class="info-box-number">0</span>
             </div>
             <!-- /.info-box-content -->
         </div>
