--- a/templates/admin/order/_form.html.twig
+++ b/templates/admin/order/_form.html.twig
@@ -3,6 +3,28 @@
         'novalidate':'novalidate'
     }
 }) }}
+<div class="form-row">
+    <div class="form-group col-12">
+      {{ form_row(form.created_at)}}
+    </div>
+    <div class="form-group col-4">
+      {{ form_row(form.state)}}
+    </div>
+
+    <div class="form-group col-4">
+      {{ form_row(form.shipping_state)}}
+    </div>
+    <div class="form-group col-4">
+      {{ form_row(form.shipping)}}
+    </div>
+    <div class="form-group col-4">
+      {{ form_row(form.shipping_adress)}}
+      <p><a href="{{ path('order_adress',{ id: order.user.id}) }}">Add or edit adress <i class="fas fa-pencil-alt text-success "></i> </a></p>
+    </div>
+    <div class="form-group col-8">
+      {{ form_row(form.note)}}
+    </div>
     {{ form_widget(form) }}
+</div>
     <button class="btn btn-primary btn-lg">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
