--- a/templates/admin/profile/index.html.twig
+++ b/templates/admin/profile/index.html.twig
@@ -1,5 +1,6 @@
 {% import "macros/breadcrumb.html.twig" as utils %}
 {% import "/macros/image.html.twig" as image %}
+{% import "macros/alertes.html.twig" as alerte %}
 
 {% extends "admin/base.html.twig" %}
 
@@ -15,6 +16,9 @@
 {% endblock %}
 
 {% block body %}
+{% for item in app.flashes('success') %}
+  {{ alerte.alert(item,'success')}}
+{% endfor %}
   <div class="row">
     <div class="col-md-3">
       <!-- Profile Image -->
@@ -98,14 +102,14 @@
       <div class="card">
         <div class="card-header p-2">
           <ul class="nav nav-pills">
-            <li class="nav-item"><a class="nav-link active" href="#activity" data-toggle="tab">Activity</a></li>
+            <li class="nav-item"><a class="nav-link {% if app.request.query.get('tab') is null or app.request.query.get('tab') == '' %}active{% endif %}" href="#activity" data-toggle="tab">Activity</a></li>
             <li class="nav-item"><a class="nav-link" href="#timeline" data-toggle="tab">Timeline</a></li>
-            <li class="nav-item"><a class="nav-link" href="#settings" data-toggle="tab">Settings</a></li>
+            <li class="nav-item"><a class="nav-link {% if app.request.query.get('tab') == 'settings' %}active{% endif %}" href="#settings" data-toggle="tab">Settings</a></li>
           </ul>
         </div><!-- /.card-header -->
         <div class="card-body">
           <div class="tab-content">
-            <div class="active tab-pane" id="activity">
+            <div class="{% if app.request.query.get('tab') is null or app.request.query.get('tab') == '' %}active{% endif %} tab-pane" id="activity">
               <!-- Post -->
               <div class="post">
                 <div class="user-block">
@@ -315,53 +319,11 @@
             </div>
             <!-- /.tab-pane -->
 
-            <div class="tab-pane" id="settings">
-              <form class="form-horizontal">
-                <div class="form-group row">
-                  <label for="inputName" class="col-sm-2 col-form-label">Name</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputName" placeholder="Name">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="inputName2" class="col-sm-2 col-form-label">Name</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputName2" placeholder="Name">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="inputExperience" class="col-sm-2 col-form-label">Experience</label>
-                  <div class="col-sm-10">
-                    <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="inputSkills" class="col-sm-2 col-form-label">Skills</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="offset-sm-2 col-sm-10">
-                    <div class="checkbox">
-                      <label>
-                        <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="offset-sm-2 col-sm-10">
-                    <button type="submit" class="btn btn-danger">Submit</button>
-                  </div>
-                </div>
-              </form>
+            <div class="tab-pane {% if app.request.query.get('tab') == 'settings' %}active{% endif %}" id="settings">
+               {{ form_start(form,{action: path('profile_edit',{id: app.user.id })}) }}
+                    {{ form_widget(form) }}
+                    <button class="btn btn-primary btn-lg">Update <i class="fas fa-save"></i> </button>
+                {{ form_end(form) }}
             </div>
             <!-- /.tab-pane -->
           </div>
