--- a/templates/main/article/show.html.twig
+++ b/templates/main/article/show.html.twig
@@ -108,7 +108,7 @@
             <!-- /.card-footer -->
             <div class="card-footer">
             {% if is_granted('ROLE_USER') %}
-                {{ include('admin/comment/_form.html.twig')}}
+                {# {{ include('admin/comment/_form.html.twig')}} #}
             {% endif %}
             </div>        
             <!-- /.card-footer -->
